[package]
name = "crack_yearn_md5"
version = "1.0.1-alpha.0"
description = "Software to crack the Yearn v2 site password from a 4x md5 hash found in the sourcecode."
license = "AGPL-3.0"
authors = ["Transmissions <greenfeatherhelp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"

[profile.dev]
opt-level = 3
